--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -10,4 +10,4 @@ set(SRC_FILES ${BASE_SRC_FILES})
 set(INC_FILES ${BASE_INC_FILES})
 
 add_library(${LIB_NAME} STATIC ${SRC_FILES} ${INC_FILES})
-target_link_libraries(${LIB_NAME} ${OpenCV_LIBS} pthread X11)
+target_link_libraries(${LIB_NAME} ${OpenCV_LIBS})
